Corrigindo curso de vagrant

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <ul>
 
-        <li>Vagrant: Gerenciando Maquinas Virtuais</li>
+        <li>Vagrant: Gerenciando Máquinas Virtuais</li>
+
         <li>Docker: Criando containers sem dor de cabeça</li>
 
         <li>Ansible</li>
